# goit-pythonweb-hw-06

./: .env_example  README.md  connect.py  models.py  my_select.py  postgres.sh  pyproject.toml  seed.py  settings.py
migrations/: env.py
